# edc-rs

./: .gitignore  Cargo.toml  README.md  dist.toml  docker-compose.yml  index.html  oranda.json  release-plz.toml
.github/: dependabot.yml
.github/workflows/: release-docker.yml  release-plz.yml  release.yml  test.yml  web.yml
edc-connector-client/: CHANGELOG.md  Cargo.toml  README.md
edc-connector-client/examples/: get_asset.rs
edc-connector-client/src/: api.rs  client.rs  error.rs  lib.rs  types.rs
edc-connector-client/src/api/: assets.rs  catalog.rs  contract_agreement.rs  contract_definitions.rs  contract_negotiations.rs  dataplanes.rs  edrs.rs  policies.rs  transfer_process.rs
edc-connector-client/src/types/: asset.rs  callback_address.rs  catalog.rs  context.rs  contract_agreement.rs  contract_definition.rs  contract_negotiation.rs  data_address.rs  dataplane.rs  edr.rs  policy.rs  properties.rs  query.rs  response.rs  transfer_process.rs
edc-connector-client/src/types/policy/: odrl.rs
edc-connector-client/src/types/properties/: conversion.rs
edc-connector-client/tests/: asset-tests.rs  catalog-tests.rs  contract-agreement-tests.rs  contract-definition-tests.rs  contract-negotiation-tests.rs  dataplane-tests.rs  edr-tests.rs  policy-tests.rs  transfer-process-tests.rs
edc-connector-client/tests/common/: mod.rs
edc-connector-tui/: CHANGELOG.md  Cargo.toml  README.md
edc-connector-tui/src/: app.rs  components.rs  config.rs  constants.rs  main.rs  nav.rs  runner.rs  types.rs
edc-connector-tui/src/app/: action.rs  fetch.rs  model.rs  msg.rs  update.rs  view.rs
edc-connector-tui/src/components/: assets.rs  connectors.rs  contract_definitions.rs  contract_negotiations.rs  footer.rs  header.rs  launch_bar.rs  policies.rs  resources.rs  table.rs  transfer_processes.rs
edc-connector-tui/src/components/assets/: model.rs  msg.rs
edc-connector-tui/src/components/connectors/: model.rs  msg.rs
edc-connector-tui/src/components/footer/: model.rs  msg.rs
edc-connector-tui/src/components/header/: help.rs  msg.rs
edc-connector-tui/src/components/launch_bar/: msg.rs
edc-connector-tui/src/components/resources/: msg.rs  resource.rs
edc-connector-tui/src/components/resources/resource/: msg.rs
edc-connector-tui/src/components/table/: model.rs  msg.rs
edc-connector-tui/src/types/: connector.rs  info.rs  nav.rs
testing/: docker-compose.yml
testing/conf/consumer-connector.config/: configuration.properties  vault.properties
testing/conf/provider-connector.config/: configuration.properties
testing/connector/: build.gradle.kts
testing/connector/gradle/: libs.versions.toml
testing/connector/src/main/docker/: Dockerfile
