[workspace]
resolver="2"
members = [
    "edc-connector-client",
    "edc-connector-tui"
]

[workspace.dependencies]
thiserror = "1.0"
async-trait = "0.1.68"
tracing = "0.1.37"
serde={version = "1", features= ["derive"]}
serde_json= "1"
serde_with= "3.7.0"
tokio= {version="1", features=["full"]}
uuid = { version ="1", features = ["v4"] }

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.22.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu"]
allow-dirty = ["ci"]
pr-run-mode = "upload"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

