[package]
name = "edc-connector-client"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description= "A Rust client for EDC"
repository = "https://github.com/wolf4ood/edc-rs"
keywords = ["dataspace", "http"]
categories = ["dataspace"]
readme = "README.md"

[dependencies]
reqwest = { version="0.12.3",  features= ["json"]}
serde = {workspace = true}
serde_json = {workspace = true}
serde_with = {workspace = true}
thiserror = {workspace=true}

[dev-dependencies]
tokio = {workspace=true, features = ["full"]}
uuid = {workspace=true, features = ["v4"]}
