[package]
name = "edc-connector-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
ratatui = "0.26.0"
anyhow = "1.0.83"
dirs-next = "2.0.0"
toml = "0.8.12"
tokio = {workspace=true}
serde = {workspace=true}
